tests/golden/type_errors/record_pattern_wrong_type.cd
struct Person { name: string }
let value = 1;
print match value {
  Person {} => "record",
  _ => "other",
};
