tests/golden/type_errors/record_pattern_wrong_type.err
Type error at 4:3: record pattern expects struct value
    Person {} => "record",
    ^
